# plutus-contracts

./: .gitignore  cabal.project  readme.md
.devcontainer/: Dockerfile  docker-compose.yml
SimpleGambling/: SimpleGambling.cabal
SimpleGambling/contract/: SimpleGambling.hs
SimpleRaffle/: SimpleRaffle.cabal  readme.md
SimpleRaffle/contract/: SimpleRaffle.hs
SpendAny/: spendany.cabal
SpendAny/contract/: spendany.hs
TokenSwap/: TokenSwap.cabal  readme.md
TokenSwap/contract/: TokenSwap.hs
TokenSwap/test/: TokenSwap_test.hs
TokenSwap/usage/: tokenswap.ts
Vesting/: Vesting.cabal  readme.md
Vesting/contract/: Vesting.hs
Vesting/test/: Vesting_test.hs
Vesting/usage/: getaddr.ts  vesting.ts
ZingCoin/: zingcoin.cabal
ZingCoin/contract/: zingcoin.hs
ZingCoin/test/: zingcoin_test.hs
ZingCoin/usage/: mintZingcoin.ts
ZingCoinParameterized/: readme.md  zingcoinparameterized.cabal
ZingCoinParameterized/contract/: zingcoinparameterized.hs
ZingCoinParameterized/usage/: mintZingcoin.ts
ZingNFT/: readme.md  zingnft.cabal
ZingNFT/contract/: thread.hs  threadval.hs  zingnft.hs
ZingNFT/test/: zingnft_test.hs
ZingNFT/usage/: date.ts  main.ts  mintZingnft.ts  zingnft.ts
ZingNFT/usage/metadata/: ZingBoi001.json
ZingNFTTimeLocked/: readme.md  zingnft_timelocked.cabal
ZingNFTTimeLocked/contract/: zingnft_timelocked.hs
ZingNFTTimeLocked/test/: zingnft_timelocked_test.hs
ZingNFTTimeLocked/usage/: zingnft.ts
